# start-python

./: pyproject.toml
execution-process/add_module_to_sys/: main.py  my_module.py
execution-process/compilation/: main.py
execution-process/initialize-sys.modules/: print_sys_modules.py
execution-process/module-search/: module_cache.py  my_module.py  print_builtin_modules.py  print_module_spec_origin.py  sys_path.py
execution-process/namespace/: main.py
execution-process/understand-__name__/: main.py  my_module.py
start-python/click_/01-command/: 01-basic.py
start-python/click_/02-argument/: 01-basic.py  02-multiple-arguments.py  03-variable-argument.py  04-argument-types.py
start-python/click_/03-option/: 01-basic.py  02-flags.py  03-multiple-values.py  04-value-types.py  05-required-options.py
start-python/click_/04-command-group/: 01-basic.py  02-chaining-command.py  03-nesting-command.py
start-python/click_/05-help-message/: 01-auto-help-generation.py  02-customize-help-messages.py  03-context-settings.py
start-python/click_/06-take-input/: 01-prompt.py  02-prompt-option.py  03-confirmation-prompt.py  04-callback-input.py  05-eager-option.py
